--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,43 @@ button{
   width:50%;
 }
 
+.column-1{
+  padding-left: 30%;
+}
+
+.column-2{
+  padding-left: 30%;
+}
+
+.column-3{
+  padding-left: 40%;
+}
+
+.column-4{
+  padding-left: 10%;
+}
+
+.column-8{
+  padding-left: 10%;
+}
+
+.column-9{
+  padding-left: 10%;
+}
+
+.column-11{
+  padding-left: 5%;
+}
+
+.column-12{
+  padding-left: 5%;
+}
+
+.column-13{
+  padding-left: 5%;
+}
+
+
 .jumbotron{
   background-color: #adadad;
   height: 200px
@@ -78,7 +115,7 @@ img.snapshot{
 }
 
 footer {
-	left:0px;
+	left:5%;
 	bottom:0;
 	width: 100%;
 	text-align: left;
